apps/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: nori-cloud
  labels:
    app: uptime-kuma
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
      targetPort: 3001
      name: http
